overflow fix

--- a/app/style.css
+++ b/app/style.css
@@ -5,6 +5,7 @@
     padding: 0%;
     margin: 0;
     overflow-x: hidden;
+    overflow-y: hidden;
 }
 body{
     background-color: hsl(226, 43%, 10%);
@@ -138,6 +139,10 @@ body{
 }
 
 @media screen and (max-width: 425px) {
+
+*{
+    overflow-y: visible;
+}
     .container{
         display: flex;
         flex-direction: column;
